Changelog
=========

7.0.dev0 - (unreleased)
-----------------------

6.9 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

6.8 - (2017-10-30)
------------------
* Bug fix: fix tests for compatibility with eea.rdfmarshaller
  [tiberich]
* Bug fix: don't fail if dexterity content has no image field
  [tiberich #89405 CCA]
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

6.7 - (2017-09-22)
------------------
* Bug fix: Fix eea.depiction tests
  [avoinea]

6.6 - (2017-09-19)
------------------
* Bug fix: Fix eea.depiction for rdfmarshaller
  [avoinea]

6.5 - (2017-09-15)
------------------
* Change: added ICountryProfile to DepictionVocabulary interfaces
  [ichim-david refs #88123]

6.4 - (2017-08-29)
------------------
* Bug Fix: Changed the way in which the DexterityImageView retrieves images
  [iulianpetchesi #87511]

6.3 - (2017-08-16)
------------------
* Change: Added some unit tests for rdf marshaller
  [zoltan_andras refs #86696]
* Bug fix: Treated get_size error when the blob is represented as a string
  [zoltan_andras refs #86449]

6.2 - (2017-06-26)
------------------
* Bug fix: tests fixes, failling tests in other products
* Bug fix: fixed PyLint warnings and errors
  [zoltan_andras refs #81209]

6.1 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

6.0 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

5.9 - (2017-04-14)
------------------
* Change: Enabled compatibility with eea.rdfmarshaller
  [zoleesan - refs #83153]

5.8 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

5.7 - (2015-10-05)
------------------
* Bug fix: Add missing GenericSetup importStep dependency
  [voineali refs #27405]

5.6 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package