@@ -16,4 +16,9 @@
     provides="eea.rdfmarshaller.interfaces.ISurfResourceModifier"
     zcml:condition="installed eea.rdfmarshaller" />
 
+  <subscriber factory=".marshaller.Depiction2SurfModifier"
+    for="Products.CMFCore.interfaces.IContentish"
+    provides="eea.rdfmarshaller.interfaces.ISurfResourceModifier"
+    zcml:condition="installed eea.rdfmarshaller" />
+
 </configure>
