@@ -1,12 +1,14 @@
 """ eea.rdfmarshaller extensions for eea.depiction
 """
-import surf
 import logging
-from Products.CMFCore.Expression import getExprContext
-from Products.CMFCore.utils import getToolByName
+
+import surf
 from eea.depiction.traverse import ScaleTraverser
 from eea.rdfmarshaller.interfaces import ISurfResourceModifier
+from Products.CMFCore.Expression import getExprContext
+from Products.CMFCore.utils import getToolByName
 from zope.interface import implements
+
 logger = logging.getLogger("eea.depiction")
 
 
@@ -59,6 +61,7 @@ class Depiction2SurfModifier(object):
             <schema:height>200px</schema:height>
           </schema:Image>
         """
+        # import pdb; pdb.set_trace()
         req = self.context.REQUEST
 
         base_url = self.context.absolute_url()
