@@ -1,33 +1,50 @@
 """ Various setup
 """
+
 import logging
-from zope.component import queryUtility
-from Products.CMFCore.utils import getToolByName
-from plone.app.redirector.interfaces import IRedirectionStorage
+
 from eea.depiction.interfaces import IDepictionTool
+from plone.api import content
+from plone.app.redirector.interfaces import IRedirectionStorage
+from plone.namedfile.file import NamedBlobImage
+from Products.CMFCore.utils import getToolByName
+from zope.component import queryUtility
 
 logger = logging.getLogger('eea.depiction')
+
 
 def setupGenericImage(site):
     """ Add generic image within portal_depiction if it doesn't exists
     """
     tool = queryUtility(IDepictionTool)
+
     if 'generic' in tool.objectIds():
         return
 
     img = site.restrictedTraverse(
         '++resource++eea.depiction.images/generic.jpg')
-    tool.invokeFactory('Image', id='generic', title='Generic', image=img.GET())
+    data = img.GET()
+    content.create(
+        type="Image",
+        title="Generic",
+        image=NamedBlobImage(data=data, contentType="image/jpeg",
+                             filename=u"generic.jpg"),
+        container=tool)
+    # tool.invokeFactory('Image', id='generic', title='Generic', image=)
+
 
 def setupDefaultImages(site):
     """ Move images from valentine-imagescales
     """
+
     if ('valentine-imagescales' not in site.objectIds() or
-        IDepictionTool.providedBy(site['valentine-imagescales'])):
+            IDepictionTool.providedBy(site['valentine-imagescales'])):
+
         return setupGenericImage(site)
 
     valentine = site['valentine-imagescales']
     tool = queryUtility(IDepictionTool)
+
     for image in valentine.objectIds():
         if image not in tool.objectIds():
             cb = valentine.manage_cutObjects(image)
@@ -43,9 +60,11 @@ def setupDefaultImages(site):
     # Setup generic image
     setupGenericImage(site)
 
+
 def importVarious(self):
     """ Various setup
     """
+
     if self.readDataFile('eea.depiction.txt') is None:
         return
 
