@@ -3,6 +3,12 @@ Changelog
 
 7.0.dev0 - (unreleased)
 -----------------------
+- Bug fix: use a NamedBlobImage when adding initial image. This fixes issues
+  with Plone websites that have replaced the default Archetypes-based content
+  types with those derived from Dexterity. In case you have such a website, you
+  should delete the "/portal_depiction/generic" image and reimport the EEA
+  Depiction - Import Various generic setup step.
+  [tiberich #92045]
 
 6.9 - (2017-12-12)
 ------------------
